...
import ComposableArchitecture
import SwiftUI

struct BreedTileView: View {

    struct AccessibilityIdentifiers {
        static let favoriteButton = "FavoriteButton"
        static let breedTileName = "BreedTileName"
    }

    let favoriteImage = "star.fill"
    let unfavoriteImage = "star"

    let lifeSpanSeparator = " - "
...
